# rust_server

./: .env  Cargo.toml
src/: main.rs
src/config/: db.rs  mod.rs  users_table.rs
src/handlers/: user_handlers.rs
src/models/: user_model.rs
src/routes/: users.rs
src/schemas/: mod.rs  users_schema.rs
