[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1.83"
chrono = "0.4.38"
diesel = { version = "2.2.4", features = ["postgres"] }
dotenv = "0.15.0"
json = "0.12.4"
postgres = "0.19.9"
r2d2 = "0.8.10"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = "0.8.2"
uuid = "1.10.0"
